update code changes

--- a/m01.html
+++ b/m01.html
@@ -13,12 +13,12 @@
         <!-- Navigation Bar -->
         <div class="div-2">
             <div class="navbar">
-            <div class="text-wrapper-6">Home</div>
-              <div class="text-wrapper">Musics</div>
-              <div class="text-wrapper-2">SFX</div>
-              <div class="text-wrapper-3">About</div>
-              <div class="text-wrapper-4">Search</div>
-              <div class="text-wrapper-5">BGM</div>
+              <div class="text-wrapper-6"><a href="index.html">Home</a></div>
+              <div class="text-wrapper"><a href="musiclib_main.html">Musics</a></div>
+              <div class="text-wrapper-2"><a href="sfxlib_main.html">SFX</a></div>
+              <div class="text-wrapper-3"><a href="about.html">About</a></div>
+              <div class="text-wrapper-4"><a href="searchpage.html">Search</a></div>
+              <div class="text-wrapper-5"><a href="bgmlib_main.html">BGM</a></div>
               <img class="pmlogo" src="resources/logo/pmlogo.png" />
           </div>
 
