update code changes in music track 1

--- a/m01.html
+++ b/m01.html
@@ -22,16 +22,18 @@
               <img class="pmlogo" src="resources/logo/pmlogo.png" />
           </div>
 
-        <div class="text-wrapper-10">Song Title</div>
+        <div class="text-wrapper-10">Dreamer (Rival Remix)</div>
 
         </div>
         <div class="overlap">
           <div class="list">
-            <div class="rectangle"></div> <!-- Player -->
+            <div class="rectangle"> <!-- Player -->
+              <audio id="audiop" src="resources/files/musiclib/m01.mp3" controls="controls"></audio>
+            </div> 
             <div class="rectangle-2"></div> <!-- Album -->
           </div>
           
-          <div class="text-wrapper-7">Artist Title</div> <!-- Artist Title -->
+          <div class="text-wrapper-7">Rival, Alan Walker</div> <!-- Artist Title -->
         </div>
         <div class="overlap-group"> <!-- Download info -->
           <div class="div-wrapper"><div class="text-wrapper-8">Download</div></div> <!-- Download Button -->
