update code changes 6pm

--- a/index.html
+++ b/index.html
@@ -35,60 +35,60 @@
         <!-- Music Library List 1 -->
         <div class="list">
           <div class="listboarder">
-            <div class="album_style"></div>
-            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
-            <div class="songtitle_style">Song Title</div>
-            <div class="artisttitle_style">Artist Title</div>
+            <div class="album_style_m1"></div>
+            <a href="m01.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
+            <div class="songtitle_style">Dreamer (Rival Remix)</div>
+            <div class="artisttitle_style">Rival, Alan Walker</div>
           </div>
         </div>
 
         <!-- Music Library List 2 -->
         <div class="list2">
           <div class="listboarder">
-            <div class="album_style"></div>
+            <div class="album_style_m2"></div>
             <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
-            <div class="songtitle_style">Song Title</div>
-            <div class="artisttitle_style">Artist Title</div>
+            <div class="songtitle_style">Mortals (feat. Laura Brehm)</div>
+            <div class="artisttitle_style">Warriyo, Laura Brehm</div>
           </div>
         </div>
 
          <!-- Music Library List 3 -->
         <div class="list-2">
           <div class="listboarder">
-            <div class="album_style"></div>
+            <div class="album_style_m3"></div>
             <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
-            <div class="songtitle_style">Song Title</div>
-            <div class="artisttitle_style">Artist Title</div>
+            <div class="songtitle_style">Vibe</div>
+            <div class="artisttitle_style">Spicyverse</div>
           </div>
         </div>
 
         <!-- Music Library List 4 -->
         <div class="list-3">
           <div class="listboarder">
-            <div class="album_style"></div>
+            <div class="album_style_m4"></div>
             <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
-            <div class="songtitle_style">Song Title</div>
-            <div class="artisttitle_style">Artist Title</div>
+            <div class="songtitle_style">BANDIDO FUNK</div>
+            <div class="artisttitle_style">Kamran747, Emin Nilsen</div>
           </div>
         </div>
 
         <!-- Music Library List 5 -->
         <div class="list5">
           <div class="listboarder">
-            <div class="album_style"></div>
+            <div class="album_style_m5"></div>
             <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
-            <div class="songtitle_style">Song Title</div>
-            <div class="artisttitle_style">Artist Title</div>
+            <div class="songtitle_style">EXECUTIONER</div>
+            <div class="artisttitle_style">DJ FKU</div>
           </div>
         </div>
 
         <!-- Music Library List 6 -->
         <div class="div-wrapper">
           <div class="listboarder">
-            <div class="album_style"></div>
+            <div class="album_style_m6"></div>
             <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
-            <div class="songtitle_style">Song Title</div>
-            <div class="artisttitle_style">Artist Title</div>
+            <div class="songtitle_style">Follow Back</div>
+            <div class="artisttitle_style">LXNGVX</div>
           </div>
         </div>
         
@@ -99,7 +99,7 @@
         <!-- BGM Library List 1 -->
         <div class="list-4">
           <div class="listboarder">
-            <div class="album_style"></div>
+            <div class="album_style_bgm1"></div>
             <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
             <div class="songtitle_style">Song Title</div>
             <div class="artisttitle_style">Artist Title</div>
@@ -109,7 +109,7 @@
         <!-- BGM Library List 2 -->
         <div class="list-5">
           <div class="listboarder">
-            <div class="album_style"></div>
+            <div class="album_style_bgm2"></div>
             <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
             <div class="songtitle_style">Song Title</div>
             <div class="artisttitle_style">Artist Title</div>
@@ -119,7 +119,7 @@
         <!-- BGM Library List 3 -->
         <div class="list-8">
           <div class="listboarder">
-            <div class="album_style"></div>
+            <div class="album_style_bgm3"></div>
             <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
             <div class="songtitle_style">Song Title</div>
             <div class="artisttitle_style">Artist Title</div>
@@ -129,7 +129,7 @@
         <!-- BGM Library List 4 -->
         <div class="list-9">
           <div class="listboarder">
-            <div class="album_style"></div>
+            <div class="album_style_bgm4"></div>
             <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
             <div class="songtitle_style">Song Title</div>
             <div class="artisttitle_style">Artist Title</div>
@@ -139,7 +139,7 @@
         <!-- BGM Library List 5 -->
         <div class="list-6">
           <div class="listboarder">
-            <div class="album_style"></div>
+            <div class="album_style_bgm5"></div>
             <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
             <div class="songtitle_style">Song Title</div>
             <div class="artisttitle_style">Artist Title</div>
@@ -149,7 +149,7 @@
         <!-- BGM Library List 6 -->
         <div class="list-7">
           <div class="listboarder">
-            <div class="album_style"></div>
+            <div class="album_style_bgm6"></div>
             <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
             <div class="songtitle_style">Song Title</div>
             <div class="artisttitle_style">Artist Title</div>
