--- a/musiclib_main.html
+++ b/musiclib_main.html
@@ -28,170 +28,186 @@
         <div class="text-wrapper-10">Music Library</div>
 
 
+      </div>
+      <div class="list">
+        <div class="listboarder">
+          <div class="album_style1"></div>
+          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <div class="songtitle_style">Dreamer (Rival Remix)</div>
+          <div class="artisttitle_style">Rival, Alan Walker</div>
         </div>
-        <div class="list">
-          <div class="listboarder">
-            <div class="album_style"></div>
-            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
-            <div class="songtitle_style">Song Title</div>
-            <div class="artisttitle_style">Artist Title</div>
-          </div>
-        </div>
-        <div class="list2">
-          <div class="listboarder">
-            <div class="album_style"></div>
-            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
-            <div class="songtitle_style">Song Title</div>
-            <div class="artisttitle_style">Artist Title</div>
-          </div>
-        </div>
-        <div class="list13">
-          <div class="listboarder">
-            <div class="album_style"></div>
-            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
-            <div class="songtitle_style">Song Title</div>
-            <div class="artisttitle_style">Artist Title</div>
-          </div>
-        </div>
-        <div class="div-wrapper">
-          <div class="listboarder">
-            <div class="album_style"></div>
-            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
-            <div class="songtitle_style">Song Title</div>
-            <div class="artisttitle_style">Artist Title</div>
-          </div>
-        </div>
-        <div class="list-2">
-          <div class="listboarder">
-            <div class="album_style"></div>
-            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
-            <div class="songtitle_style">Song Title</div>
-            <div class="artisttitle_style">Artist Title</div>
-          </div>
-        </div>
-        <div class="list-3">
-          <div class="listboarder">
-            <div class="album_style"></div>
-            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
-            <div class="songtitle_style">Song Title</div>
-            <div class="artisttitle_style">Artist Title</div>
-          </div>
-        </div>
-        <div class="list-4">
-          <div class="listboarder">
-            <div class="album_style"></div>
-            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
-            <div class="songtitle_style">Song Title</div>
-            <div class="artisttitle_style">Artist Title</div>
-          </div>
-        </div>
-        <div class="list-5">
-          <div class="listboarder">
-            <div class="album_style"></div>
-            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
-            <div class="songtitle_style">Song Title</div>
-            <div class="artisttitle_style">Artist Title</div>
-          </div>
-        </div>
-        <div class="list-6">
-          <div class="listboarder">
-            <div class="album_style"></div>
-            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
-            <div class="songtitle_style">Song Title</div>
-            <div class="artisttitle_style">Artist Title</div>
-          </div>
-        </div>
-        <div class="list-7">
-          <div class="listboarder">
-            <div class="album_style"></div>
-            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
-            <div class="songtitle_style">Song Title</div>
-            <div class="artisttitle_style">Artist Title</div>
-          </div>
-        </div>
-        <div class="list-8">
-          <div class="listboarder">
-            <div class="album_style"></div>
-            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
-            <div class="songtitle_style">Song Title</div>
-            <div class="artisttitle_style">Artist Title</div>
-          </div>
-        </div>
-        <div class="list-9">
-          <div class="listboarder">
-            <div class="album_style"></div>
-            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
-            <div class="songtitle_style">Song Title</div>
-            <div class="artisttitle_style">Artist Title</div>
-          </div>
-        </div>
-        <div class="list-10">
-          <div class="listboarder">
-            <div class="album_style"></div>
-            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
-            <div class="songtitle_style">Song Title</div>
-            <div class="artisttitle_style">Artist Title</div>
-          </div>
-        </div>
-        <div class="list-11">
-          <div class="listboarder">
-            <div class="album_style"></div>
-            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
-            <div class="songtitle_style">Song Title</div>
-            <div class="artisttitle_style">Artist Title</div>
-          </div>
-        </div>
-        <div class="list-12">
-          <div class="listboarder">
-            <div class="album_style"></div>
-            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
-            <div class="songtitle_style">Song Title</div>
-            <div class="artisttitle_style">Artist Title</div>
-          </div>
-        </div>
-        <div class="list-13">
-          <div class="listboarder">
-            <div class="album_style"></div>
-            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
-            <div class="songtitle_style">Song Title</div>
-            <div class="artisttitle_style">Artist Title</div>
-          </div>
-        </div>
-        <div class="list-14">
-          <div class="listboarder">
-            <div class="album_style"></div>
-            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
-            <div class="songtitle_style">Song Title</div>
-            <div class="artisttitle_style">Artist Title</div>
-          </div>
-        </div>
-        <div class="list-15">
-          <div class="listboarder">
-            <div class="album_style"></div>
-            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
-            <div class="songtitle_style">Song Title</div>
-            <div class="artisttitle_style">Artist Title</div>
-          </div>
-        </div>
-        <div class="list-16">
-          <div class="listboarder">
-            <div class="album_style"></div>
-            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
-            <div class="songtitle_style">Song Title</div>
-            <div class="artisttitle_style">Artist Title</div>
-          </div>
-        </div>
-        <div class="list-17">
-          <div class="listboarder">
-            <div class="album_style"></div>
-            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
-            <div class="songtitle_style">Song Title</div>
-            <div class="artisttitle_style">Artist Title</div>
-          </div>
-        </div>
+      </div>
 
+      <div class="list2">
+        <div class="listboarder">
+          <div class="album_style2"></div>
+          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <div class="songtitle_style">Stars in the Sky</div>
+          <div class="artisttitle_style">BEKSY.</div>
+        </div>
+      </div>
 
+      <div class="list-4">
+        <div class="listboarder">
+          <div class="album_style3"></div>
+          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <div class="songtitle_style">Cybernetic</div>
+          <div class="artisttitle_style">Rameses B</div>
+        </div>
+      </div>
 
+      <div class="list-5">
+        <div class="listboarder">
+          <div class="album_style4"></div>
+          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <div class="songtitle_style">Kapoeira Phonk</div>
+          <div class="artisttitle_style">DYNAMIS, HXDES</div>
+        </div>
+      </div>
+
+      <div class="list-2">
+        <div class="listboarder">
+          <div class="album_style5"></div>
+          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <div class="songtitle_style">Vibe</div>
+          <div class="artisttitle_style">Spicyverse</div>
+        </div>
+      </div>
+
+      <div class="list-3">
+        <div class="listboarder">
+          <div class="album_style6"></div>
+          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <div class="songtitle_style">Soundclash</div>
+          <div class="artisttitle_style">Jonth</div>
+        </div>
+      </div>
+
+      <div class="list-6">
+        <div class="listboarder">
+          <div class="album_style7"></div>
+          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <div class="songtitle_style">Pushing On</div>
+          <div class="artisttitle_style">RIOT</div>
+        </div>
+      </div>
+
+      <div class="list-7">
+        <div class="listboarder">
+          <div class="album_style8"></div>
+          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <div class="songtitle_style">Comet</div>
+          <div class="artisttitle_style">Keepsake, Skybreak</div>
+        </div>
+      </div>
+
+      <div class="list-10">
+        <div class="listboarder">
+          <div class="album_style9"></div>
+          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <div class="songtitle_style">DELTA</div>
+          <div class="artisttitle_style">DJ FKU</div>
+        </div>
+      </div>
+      
+      <div class="list-11">
+        <div class="listboarder">
+          <div class="album_style10"></div>
+          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <div class="songtitle_style">Nostalgia</div>
+          <div class="artisttitle_style">Johnning, Janji</div>
+        </div>
+      </div>
+
+      <div class="list-8">
+        <div class="listboarder">
+          <div class="album_style11"></div>
+          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <div class="songtitle_style">BANDIDO FUNK</div>
+          <div class="artisttitle_style">Kamran747, Emin Nilsen</div>
+        </div>
+      </div>
+
+      <div class="list-9">
+        <div class="listboarder">
+          <div class="album_style12"></div>
+          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <div class="songtitle_style">jealous</div>
+          <div class="artisttitle_style">The Trinity</div>
+        </div>
+      </div>
+
+      <div class="list13">
+        <div class="listboarder">
+          <div class="album_style13"></div>
+          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <div class="songtitle_style">Different Eyes</div>
+          <div class="artisttitle_style">ANIZYZ, MVSTAFA</div>
+        </div>
+      </div>
+
+      <div class="div-wrapper">
+        <div class="listboarder">
+          <div class="album_style14"></div>
+          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <div class="songtitle_style">GRAVE</div>
+          <div class="artisttitle_style">Idle Days, HOWL</div>
+        </div>
+      </div>
+
+      <div class="list-16">
+        <div class="listboarder">
+          <div class="album_style15"></div>
+          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <div class="songtitle_style">Follow Back</div>
+          <div class="artisttitle_style">LXNGVX</div>
+        </div>
+      </div>
+
+      <div class="list-17">
+        <div class="listboarder">
+          <div class="album_style16"></div>
+          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <div class="songtitle_style">EXECUTIONER</div>
+          <div class="artisttitle_style">DJ FKU</div>
+        </div>
+      </div>
+
+      <div class="list-14">
+        <div class="listboarder">
+          <div class="album_style17"></div>
+          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <div class="songtitle_style">Win & Lose</div>
+          <div class="artisttitle_style">Chime</div>
+        </div>
+      </div>
+
+      <div class="list-15">
+        <div class="listboarder">
+          <div class="album_style18"></div>
+          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <div class="songtitle_style">Revolution</div>
+          <div class="artisttitle_style">Linn Sandin, Midranger, Poylow</div>
+        </div>
+      </div>
+
+      <div class="list-12">
+        <div class="listboarder">
+          <div class="album_style19"></div>
+          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <div class="songtitle_style">Mortals (feat. Laura Brehm)</div>
+          <div class="artisttitle_style">Warriyo, Laura Brehm</div>
+        </div>
+      </div>
+
+      <div class="list-13">
+        <div class="listboarder">
+          <div class="album_style20"></div>
+          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <div class="songtitle_style">Royalty</div>
+          <div class="artisttitle_style">Maestro Chives, Egzod, Neoni</div>
+        </div>
+      </div>
 
 
 
