--- a/m01.html
+++ b/m01.html
@@ -36,8 +36,17 @@
           <div class="text-wrapper-7">Rival, Alan Walker</div> <!-- Artist Title -->
         </div>
         <div class="overlap-group"> <!-- Download info -->
-          <div class="div-wrapper"><div class="text-wrapper-8">Download</div></div> <!-- Download Button -->
-          <div class="text-wrapper-9">Download info here</div>
+          <a href="resources/files/musiclib/m01.mp3" download="Rival, Alan Walker - Dreamer (Rival Remix)"> <!-- Download Button -->
+            <div class="div-wrapper"><div class="text-wrapper-8">Download</div></div>
+          </a> 
+          <div class="text-wrapper-9">
+            Download Original Audio File Here<br><br>
+
+            You agreed to use this download and use audio music file<br>
+            in accordance with license and license with respective<br>
+            creators. Download at your own risk before use. 
+
+          </div>
         </div>
       </div>
     </div>
