update code links in music library

--- a/musiclib_main.html
+++ b/musiclib_main.html
@@ -32,7 +32,7 @@
       <div class="list">
         <div class="listboarder">
           <div class="album_style1"></div>
-          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <a href="m01.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
           <div class="songtitle_style">Dreamer (Rival Remix)</div>
           <div class="artisttitle_style">Rival, Alan Walker</div>
         </div>
@@ -41,7 +41,7 @@
       <div class="list2">
         <div class="listboarder">
           <div class="album_style2"></div>
-          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <a href="m02.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
           <div class="songtitle_style">Stars in the Sky</div>
           <div class="artisttitle_style">BEKSY.</div>
         </div>
@@ -50,7 +50,7 @@
       <div class="list-4">
         <div class="listboarder">
           <div class="album_style3"></div>
-          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <a href="m03.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
           <div class="songtitle_style">Cybernetic</div>
           <div class="artisttitle_style">Rameses B</div>
         </div>
@@ -59,7 +59,7 @@
       <div class="list-5">
         <div class="listboarder">
           <div class="album_style4"></div>
-          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <a href="m04.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
           <div class="songtitle_style">Kapoeira Phonk</div>
           <div class="artisttitle_style">DYNAMIS, HXDES</div>
         </div>
@@ -68,7 +68,7 @@
       <div class="list-2">
         <div class="listboarder">
           <div class="album_style5"></div>
-          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <a href="m05.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
           <div class="songtitle_style">Vibe</div>
           <div class="artisttitle_style">Spicyverse</div>
         </div>
@@ -77,7 +77,7 @@
       <div class="list-3">
         <div class="listboarder">
           <div class="album_style6"></div>
-          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <a href="m06.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
           <div class="songtitle_style">Soundclash</div>
           <div class="artisttitle_style">Jonth</div>
         </div>
@@ -86,7 +86,7 @@
       <div class="list-6">
         <div class="listboarder">
           <div class="album_style7"></div>
-          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <a href="m07.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
           <div class="songtitle_style">Pushing On</div>
           <div class="artisttitle_style">RIOT</div>
         </div>
@@ -95,7 +95,7 @@
       <div class="list-7">
         <div class="listboarder">
           <div class="album_style8"></div>
-          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <a href="m08.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
           <div class="songtitle_style">Comet</div>
           <div class="artisttitle_style">Keepsake, Skybreak</div>
         </div>
@@ -104,7 +104,7 @@
       <div class="list-10">
         <div class="listboarder">
           <div class="album_style9"></div>
-          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <a href="m09.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
           <div class="songtitle_style">DELTA</div>
           <div class="artisttitle_style">DJ FKU</div>
         </div>
@@ -113,7 +113,7 @@
       <div class="list-11">
         <div class="listboarder">
           <div class="album_style10"></div>
-          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <a href="m10.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
           <div class="songtitle_style">Nostalgia</div>
           <div class="artisttitle_style">Johnning, Janji</div>
         </div>
@@ -122,7 +122,7 @@
       <div class="list-8">
         <div class="listboarder">
           <div class="album_style11"></div>
-          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <a href="m11.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
           <div class="songtitle_style">BANDIDO FUNK</div>
           <div class="artisttitle_style">Kamran747, Emin Nilsen</div>
         </div>
@@ -131,7 +131,7 @@
       <div class="list-9">
         <div class="listboarder">
           <div class="album_style12"></div>
-          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <a href="m12.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
           <div class="songtitle_style">jealous</div>
           <div class="artisttitle_style">The Trinity</div>
         </div>
@@ -140,7 +140,7 @@
       <div class="list13">
         <div class="listboarder">
           <div class="album_style13"></div>
-          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <a href="m13.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
           <div class="songtitle_style">Different Eyes</div>
           <div class="artisttitle_style">ANIZYZ, MVSTAFA</div>
         </div>
@@ -149,7 +149,7 @@
       <div class="div-wrapper">
         <div class="listboarder">
           <div class="album_style14"></div>
-          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <a href="m14.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
           <div class="songtitle_style">GRAVE</div>
           <div class="artisttitle_style">Idle Days, HOWL</div>
         </div>
@@ -158,7 +158,7 @@
       <div class="list-16">
         <div class="listboarder">
           <div class="album_style15"></div>
-          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <a href="m15.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
           <div class="songtitle_style">Follow Back</div>
           <div class="artisttitle_style">LXNGVX</div>
         </div>
@@ -167,7 +167,7 @@
       <div class="list-17">
         <div class="listboarder">
           <div class="album_style16"></div>
-          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <a href="m16.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
           <div class="songtitle_style">EXECUTIONER</div>
           <div class="artisttitle_style">DJ FKU</div>
         </div>
@@ -176,7 +176,7 @@
       <div class="list-14">
         <div class="listboarder">
           <div class="album_style17"></div>
-          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <a href="m17.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
           <div class="songtitle_style">Win & Lose</div>
           <div class="artisttitle_style">Chime</div>
         </div>
@@ -185,7 +185,7 @@
       <div class="list-15">
         <div class="listboarder">
           <div class="album_style18"></div>
-          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <a href="m18.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
           <div class="songtitle_style">Revolution</div>
           <div class="artisttitle_style">Linn Sandin, Midranger, Poylow</div>
         </div>
@@ -194,7 +194,7 @@
       <div class="list-12">
         <div class="listboarder">
           <div class="album_style19"></div>
-          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <a href="m19.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
           <div class="songtitle_style">Mortals (feat. Laura Brehm)</div>
           <div class="artisttitle_style">Warriyo, Laura Brehm</div>
         </div>
@@ -203,7 +203,7 @@
       <div class="list-13">
         <div class="listboarder">
           <div class="album_style20"></div>
-          <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+          <a href="m20.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
           <div class="songtitle_style">Royalty</div>
           <div class="artisttitle_style">Maestro Chives, Egzod, Neoni</div>
         </div>
