remove download format file

--- a/m01.html
+++ b/m01.html
@@ -35,7 +35,7 @@
           <div class="text-wrapper-7">Rival, Alan Walker</div> <!-- Artist Title -->
         </div>
         <div class="overlap-group"> <!-- Download info -->
-          <a href="resources/files/musiclib/m01.mp3" download="Rival, Alan Walker - Dreamer (Rival Remix).mp3"> <!-- Download Button -->
+          <a href="resources/files/musiclib/m01.mp3" download> <!-- Download Button -->
             <div class="div-wrapper"><div class="text-wrapper-8">Download</div></div>
           </a> 
           <div class="text-wrapper-9">
