add new music sites

--- a/m12.html
+++ b/m12.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="m12.html" />
+    <link rel="stylesheet" href="m12.css" />
   </head>
   <body>
     <div class="musics-library">
