--- a/m06.html
+++ b/m06.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="m06.html" />
+    <link rel="stylesheet" href="m06.ccs" />
   </head>
   <body>
     <div class="musics-library">
