--- a/m07.html
+++ b/m07.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="m07.html" />
+    <link rel="stylesheet" href="m07.css" />
   </head>
   <body>
     <div class="musics-library">
