--- a/m08.html
+++ b/m08.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="m08.html" />
+    <link rel="stylesheet" href="m08.css" />
   </head>
   <body>
     <div class="musics-library">
