--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="list2">
           <div class="listboarder">
             <div class="album_style_m2"></div>
-            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+            <a href="m19.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
             <div class="songtitle_style">Mortals (feat. Laura Brehm)</div>
             <div class="artisttitle_style">Warriyo, Laura Brehm</div>
           </div>
@@ -55,7 +55,7 @@
         <div class="list-2">
           <div class="listboarder">
             <div class="album_style_m3"></div>
-            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+            <a href="m05.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
             <div class="songtitle_style">Vibe</div>
             <div class="artisttitle_style">Spicyverse</div>
           </div>
@@ -65,7 +65,7 @@
         <div class="list-3">
           <div class="listboarder">
             <div class="album_style_m4"></div>
-            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+            <a href="m11.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
             <div class="songtitle_style">BANDIDO FUNK</div>
             <div class="artisttitle_style">Kamran747, Emin Nilsen</div>
           </div>
@@ -75,7 +75,7 @@
         <div class="list5">
           <div class="listboarder">
             <div class="album_style_m5"></div>
-            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+            <a href="m16.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
             <div class="songtitle_style">EXECUTIONER</div>
             <div class="artisttitle_style">DJ FKU</div>
           </div>
@@ -85,7 +85,7 @@
         <div class="div-wrapper">
           <div class="listboarder">
             <div class="album_style_m6"></div>
-            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
+            <a href="m15.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
             <div class="songtitle_style">Follow Back</div>
             <div class="artisttitle_style">LXNGVX</div>
           </div>
