added title and logo in head section

--- a/m06.html
+++ b/m06.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="x-icon" href="resources/logo/pmlogo-logo.png"/>
+    <title>Playmint Music - Jonth - Soundclash</title>
     <link rel="stylesheet" href="m06.css" />
   </head>
   <body>
