--- a/m08.html
+++ b/m08.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="x-icon" href="resources/logo/pmlogo-logo.png"/>
+    <title>Playmint Music - Keepsake, Skybreak - Comet</title>
     <link rel="stylesheet" href="m08.css" />
   </head>
   <body>
