--- a/m11.html
+++ b/m11.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="x-icon" href="resources/logo/pmlogo-logo.png"/>
+    <title>Playmint Music - Kamran747, Emin Nilsen - BANDIDO FUNK</title>
     <link rel="stylesheet" href="m11.css" />
   </head>
   <body>
