--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="x-icon" href="resources/logo/pmlogo-logo.png"/>
+    <title>Playmint Music</title>
     <link rel="stylesheet" href="globals.css" />
     <link rel="stylesheet" href="home.css" />
   </head>
