--- a/m04.html
+++ b/m04.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="x-icon" href="resources/logo/pmlogo-logo.png"/>
+    <title>Playmint Music - DYNAMIS, HXDES - Kapoeira Phonk</title>
     <link rel="stylesheet" href="m04.css" />
   </head>
   <body>
