--- a/m05.html
+++ b/m05.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="x-icon" href="resources/logo/pmlogo-logo.png"/>
+    <title>Playmint Music - Spicyverse - Vibe</title>
     <link rel="stylesheet" href="m05.css" />
   </head>
   <body>
