--- a/m07.html
+++ b/m07.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="x-icon" href="resources/logo/pmlogo-logo.png"/>
+    <title>Playmint Music - RIOT - Pushing On</title>
     <link rel="stylesheet" href="m07.css" />
   </head>
   <body>
