--- a/m10.html
+++ b/m10.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="x-icon" href="resources/logo/pmlogo-logo.png"/>
+    <title>Playmint Music - Johnning, Janji - Nostalgia</title>
     <link rel="stylesheet" href="m10.css" />
   </head>
   <body>
