--- a/m13.html
+++ b/m13.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="x-icon" href="resources/logo/pmlogo-logo.png"/>
+    <title>Playmint Music - ANIZYZ, MVSTAFA - Different Eyes</title>
     <link rel="stylesheet" href="m13.css" />
   </head>
   <body>
