--- a/m14.html
+++ b/m14.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="x-icon" href="resources/logo/pmlogo-logo.png"/>
+    <title>Playmint Music - Idle Days, HOWL - GRAVE</title>
     <link rel="stylesheet" href="m14.css" />
   </head>
   <body>
