--- a/m15.html
+++ b/m15.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="x-icon" href="resources/logo/pmlogo-logo.png"/>
+    <title>Playmint Music - LXNGVX - Follow Back</title>
     <link rel="stylesheet" href="m15.css" />
   </head>
   <body>
