--- a/m17.html
+++ b/m17.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="x-icon" href="resources/logo/pmlogo-logo.png"/>
+    <title>Playmint Music - Chime - Win & Lose</title>
     <link rel="stylesheet" href="m17.css" />
   </head>
   <body>
