--- a/m18.html
+++ b/m18.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="x-icon" href="resources/logo/pmlogo-logo.png"/>
+    <title>Playmint Music - Linn Sandin, Midranger, Poylow - Revolution</title>
     <link rel="stylesheet" href="m18.css" />
   </head>
   <body>
