--- a/m19.html
+++ b/m19.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="x-icon" href="resources/logo/pmlogo-logo.png"/>
+    <title>Playmint Music - Warriyo, Laura Brehm - Mortals (feat. Laura Brehm)</title>
     <link rel="stylesheet" href="m19.css" />
   </head>
   <body>
