--- a/m20.html
+++ b/m20.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="x-icon" href="resources/logo/pmlogo-logo.png"/>
+    <title>Playmint Music - Maestro Chives, Egzod, Neoni - Royalty</title>
     <link rel="stylesheet" href="m20.css" />
   </head>
   <body>
