--- a/musiclib_main.html
+++ b/musiclib_main.html
@@ -210,6 +210,24 @@
         </div>
       </div>
 
+      <div class="list21">
+        <div class="listboarder">
+          <div class="album_style20"></div>
+          <a href="m20.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
+          <div class="songtitle_style">Royalty</div>
+          <div class="artisttitle_style">Maestro Chives, Egzod, Neoni</div>
+        </div>
+      </div>
+
+      <div class="list22">
+        <div class="listboarder">
+          <div class="album_style20"></div>
+          <a href="m20.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
+          <div class="songtitle_style">Royalty</div>
+          <div class="artisttitle_style">Maestro Chives, Egzod, Neoni</div>
+        </div>
+      </div>
+
 
 
       </div>
