added titles on header

--- a/bgm08.html
+++ b/bgm08.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="x-icon" href="resources/logo/pmlogo-logo.png"/>
+    <title>Playmint Music - Rival, Alan Walker - Dreamer (Rival Remix)</title>
     <link rel="stylesheet" href="bgm08.css" />
   </head>
   <body>
