--- a/musiclib_main.html
+++ b/musiclib_main.html
@@ -212,89 +212,89 @@
 
       <div class="list21">
         <div class="listboarder">
-          <div class="album_style20"></div>
-          <a href="m20.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
-          <div class="songtitle_style">Royalty</div>
-          <div class="artisttitle_style">Maestro Chives, Egzod, Neoni</div>
+          <div class="album_style21"></div>
+          <a href="m21.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
+          <div class="songtitle_style">On & On (feat. Daniel Levi)</div>
+          <div class="artisttitle_style">Cartoon, Daniel Levi, Jéja</div>
         </div>
       </div>
 
       <div class="list22">
         <div class="listboarder">
-          <div class="album_style20"></div>
-          <a href="m20.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
-          <div class="songtitle_style">Royalty</div>
-          <div class="artisttitle_style">Maestro Chives, Egzod, Neoni</div>
+          <div class="album_style22"></div>
+          <a href="m22.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
+          <div class="songtitle_style">Why We Lose (feat. Coleman Trapp)</div>
+          <div class="artisttitle_style">Cartoon, Coleman Trapp, Jéja</div>
         </div>
       </div>
 
       <div class="list23">
         <div class="listboarder">
-          <div class="album_style20"></div>
-          <a href="m20.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
-          <div class="songtitle_style">Royalty</div>
-          <div class="artisttitle_style">Maestro Chives, Egzod, Neoni</div>
+          <div class="album_style23"></div>
+          <a href="m23.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
+          <div class="songtitle_style">Wait For You (feat. Anna Yvette)</div>
+          <div class="artisttitle_style">Electro-Light, Jordan Kelvin James, Anna Yvette</div>
         </div>
       </div>
 
       <div class="list24">
         <div class="listboarder">
-          <div class="album_style20"></div>
-          <a href="m20.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
-          <div class="songtitle_style">Royalty</div>
-          <div class="artisttitle_style">Maestro Chives, Egzod, Neoni</div>
+          <div class="album_style24"></div>
+          <a href="m24.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
+          <div class="songtitle_style">Linked</div>
+          <div class="artisttitle_style">Jim Yosef, Anna Yvette</div>
         </div>
       </div>
 
       <div class="list25">
         <div class="listboarder">
-          <div class="album_style20"></div>
-          <a href="m20.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
-          <div class="songtitle_style">Royalty</div>
-          <div class="artisttitle_style">Maestro Chives, Egzod, Neoni</div>
+          <div class="album_style25"></div>
+          <a href="m25.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
+          <div class="songtitle_style">Meant for You</div>
+          <div class="artisttitle_style">OMFG</div>
         </div>
       </div>
 
       <div class="list26">
         <div class="listboarder">
-          <div class="album_style20"></div>
-          <a href="m20.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
-          <div class="songtitle_style">Royalty</div>
-          <div class="artisttitle_style">Maestro Chives, Egzod, Neoni</div>
+          <div class="album_style26"></div>
+          <a href="m26.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
+          <div class="songtitle_style">Heroes Tonight (feat. Johnning)</div>
+          <div class="artisttitle_style">Janji, Johnning</div>
         </div>
       </div>
 
       <div class="list27">
         <div class="listboarder">
-          <div class="album_style20"></div>
-          <a href="m20.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
-          <div class="songtitle_style">Royalty</div>
-          <div class="artisttitle_style">Maestro Chives, Egzod, Neoni</div>
+          <div class="album_style27"></div>
+          <a href="m27.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
+          <div class="songtitle_style">Got the Feeling (feat. kirstin)</div>
+          <div class="artisttitle_style">Syn Cole</div>
         </div>
       </div>
 
       <div class="list28">
         <div class="listboarder">
-          <div class="album_style20"></div>
-          <a href="m20.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
-          <div class="songtitle_style">Royalty</div>
-          <div class="artisttitle_style">Maestro Chives, Egzod, Neoni</div>
+          <div class="album_style28"></div>
+          <a href="m28.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
+          <div class="songtitle_style">Cradles</div>
+          <div class="artisttitle_style">Sub Urban</div>
         </div>
       </div>
 
       <div class="list29">
         <div class="listboarder">
-          <div class="album_style20"></div>
-          <a href="m20.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
-          <div class="songtitle_style">Royalty</div>
-          <div class="artisttitle_style">Maestro Chives, Egzod, Neoni</div>
+          <div class="album_style29"></div>
+          <a href="m29.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
+          <div class="songtitle_style">???</div>
+          <div class="artisttitle_style">???</div>
         </div>
       </div>
 
       <div class="list30">
         <div class="listboarder">
-          <div class="album_style20"></div>
-          <a href="m20.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
+          <div class="album_style30"></div>
+          <a href="m30.html"><div class="buttonstyle"><div class="buttontextstyle">Details</div></div></a>
           <div class="songtitle_style">Royalty</div>
           <div class="artisttitle_style">Maestro Chives, Egzod, Neoni</div>
         </div>
