--- a/m25.html
+++ b/m25.html
@@ -23,21 +23,21 @@
               <img class="pmlogo" src="resources/logo/pmlogo.png" />
           </div>
 
-        <div class="text-wrapper-10">Royalty</div>
+        <div class="text-wrapper-10">Meant for You</div>
 
         </div>
         <div class="overlap">
           <div class="list">
             <div class="rectangle"> <!-- Player -->
-              <audio id="audiop" src="resources/files/musiclib/m20.mp3" controls="controls"></audio>
+              <audio id="audiop" src="resources/files/musiclib/m25.mp3" controls="controls"></audio>
             </div> 
             <div class="rectangle-2"></div> <!-- Album -->
           </div>
           
-          <div class="text-wrapper-7">Maestro Chives, Egzod,<br> Neoni</div> <!-- Artist Title -->
+          <div class="text-wrapper-7">OMFG</div> <!-- Artist Title -->
         </div>
         <div class="overlap-group"> <!-- Download info -->
-          <a href="resources/files/musiclib/m20.mp3" download> <!-- Download Button -->
+          <a href="resources/files/musiclib/m25.mp3" download> <!-- Download Button -->
             <div class="div-wrapper"><div class="text-wrapper-8">Download</div></div>
           </a> 
           <div class="text-wrapper-9">
